Add one paper by Yaozhong and David.

--- a/All.bib
+++ b/All.bib
@@ -3001,24 +3001,6 @@
 
 @Article{	  balan.tudor:10:stochastic,
   author	= {Balan, Raluca M. and Tudor, Ciprian A.},
-  title		= {The stochastic wave equation with fractional noise: a
-		  random field approach},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {120},
-  year		= {2010},
-  number	= {12},
-  pages		= {2468--2494},
-  issn		= {0304-4149},
-  mrclass	= {60H15 (60G60 60H05)},
-  mrnumber	= {2728174},
-  mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
-  doi		= {10.1016/j.spa.2010.08.006},
-  url		= {https://doi.org/10.1016/j.spa.2010.08.006}
-}
-
-@Article{	  balan.tudor:10:stochastic*1,
-  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
   title		= {Stochastic heat equation with multiplicative
 		  fractional-colored noise},
   journal	= {J. Theoret. Probab.},
@@ -3033,6 +3015,24 @@
   mrreviewer	= {David Nualart},
   doi		= {10.1007/s10959-009-0237-3},
   url		= {https://doi.org/10.1007/s10959-009-0237-3}
+}
+
+@Article{	  balan.tudor:10:stochastic*1,
+  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
+  title		= {The stochastic wave equation with fractional noise: a
+		  random field approach},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {120},
+  year		= {2010},
+  number	= {12},
+  pages		= {2468--2494},
+  issn		= {0304-4149},
+  mrclass	= {60H15 (60G60 60H05)},
+  mrnumber	= {2728174},
+  mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
+  doi		= {10.1016/j.spa.2010.08.006},
+  url		= {https://doi.org/10.1016/j.spa.2010.08.006}
 }
 
 @Article{	  balan.yuan:22:spatial,
@@ -5276,24 +5276,6 @@
 
 @Article{	  berman:85:asymptotic,
   author	= {Berman, Simeon M.},
-  title		= {An asymptotic bound for the tail of the distribution of
-		  the maximum of a {G}aussian process},
-  journal	= {Ann. Inst. H. Poincar\'{e} Probab. Statist.},
-  fjournal	= {Annales de l'Institut Henri Poincar\'{e}. Probabilit\'{e}s
-		  et Statistique},
-  volume	= {21},
-  year		= {1985},
-  number	= {1},
-  pages		= {47--57},
-  issn		= {0246-0203},
-  mrclass	= {60G15 (60G17)},
-  mrnumber	= {791269},
-  mrreviewer	= {T. Hida},
-  url		= {http://www.numdam.org/item?id=AIHPB_1985__21_1_47_0}
-}
-
-@Article{	  berman:85:asymptotic*1,
-  author	= {Berman, Simeon M.},
   title		= {An asymptotic formula for the distribution of the maximum
 		  of a {G}aussian process with stationary increments},
   journal	= {J. Appl. Probab.},
@@ -5308,6 +5290,24 @@
   mrreviewer	= {P. Laurie Davies},
   doi		= {10.2307/3213789},
   url		= {https://doi.org/10.2307/3213789}
+}
+
+@Article{	  berman:85:asymptotic*1,
+  author	= {Berman, Simeon M.},
+  title		= {An asymptotic bound for the tail of the distribution of
+		  the maximum of a {G}aussian process},
+  journal	= {Ann. Inst. H. Poincar\'{e} Probab. Statist.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e}. Probabilit\'{e}s
+		  et Statistique},
+  volume	= {21},
+  year		= {1985},
+  number	= {1},
+  pages		= {47--57},
+  issn		= {0246-0203},
+  mrclass	= {60G15 (60G17)},
+  mrnumber	= {791269},
+  mrreviewer	= {T. Hida},
+  url		= {http://www.numdam.org/item?id=AIHPB_1985__21_1_47_0}
 }
 
 @Article{	  bernard.nualart:90:regularite,
@@ -6770,6 +6770,23 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -6783,23 +6800,6 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -6911,19 +6911,7 @@
   url		= {https://doi.org/10.1007/s11040-021-09380-8}
 }
 
-@InCollection{	  borodin.corwin:14:macdonald,
-  author	= {Borodin, A. and Corwin, I.},
-  title		= {Macdonald processes},
-  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
-		  {P}hysics},
-  pages		= {292--316},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2014},
-  mrclass	= {60K35 (60B99 82B23 82C22)},
-  mrnumber	= {3204480}
-}
-
-@Article{	  borodin.corwin:14:macdonald*1,
+@Article{	  borodin.corwin:14:macdonald,
   author	= {Borodin, Alexei and Corwin, Ivan},
   title		= {Macdonald processes},
   journal	= {Probab. Theory Related Fields},
@@ -6938,6 +6926,18 @@
   mrreviewer	= {Rongfeng Sun},
   doi		= {10.1007/s00440-013-0482-3},
   url		= {https://doi.org/10.1007/s00440-013-0482-3}
+}
+
+@InCollection{	  borodin.corwin:14:macdonald*1,
+  author	= {Borodin, A. and Corwin, I.},
+  title		= {Macdonald processes},
+  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
+		  {P}hysics},
+  pages		= {292--316},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2014},
+  mrclass	= {60K35 (60B99 82B23 82C22)},
+  mrnumber	= {3204480}
 }
 
 @Article{	  borodin.corwin:14:moments,
@@ -9395,6 +9395,23 @@
 
 @Article{	  cerrai.debussche:19:large,
   author	= {Cerrai, Sandra and Debussche, Arnaud},
+  title		= {Large deviations for the dynamic {$\Phi^{2n}_d$} model},
+  journal	= {Appl. Math. Optim.},
+  fjournal	= {Applied Mathematics and Optimization},
+  volume	= {80},
+  year		= {2019},
+  number	= {1},
+  pages		= {81--102},
+  issn		= {0095-4616},
+  mrclass	= {35R60 (35B25 35K57)},
+  mrnumber	= {3978511},
+  mrreviewer	= {Jamil Abreu},
+  doi		= {10.1007/s00245-017-9459-4},
+  url		= {https://doi.org/10.1007/s00245-017-9459-4}
+}
+
+@Article{	  cerrai.debussche:19:large*1,
+  author	= {Cerrai, Sandra and Debussche, Arnaud},
   title		= {Large deviations for the two-dimensional stochastic
 		  {N}avier-{S}tokes equation with vanishing noise
 		  correlation},
@@ -9411,23 +9428,6 @@
   mrreviewer	= {Thomas Kelly Alberts},
   doi		= {10.1214/17-aihp881},
   url		= {https://doi.org/10.1214/17-aihp881}
-}
-
-@Article{	  cerrai.debussche:19:large*1,
-  author	= {Cerrai, Sandra and Debussche, Arnaud},
-  title		= {Large deviations for the dynamic {$\Phi^{2n}_d$} model},
-  journal	= {Appl. Math. Optim.},
-  fjournal	= {Applied Mathematics and Optimization},
-  volume	= {80},
-  year		= {2019},
-  number	= {1},
-  pages		= {81--102},
-  issn		= {0095-4616},
-  mrclass	= {35R60 (35B25 35K57)},
-  mrnumber	= {3978511},
-  mrreviewer	= {Jamil Abreu},
-  doi		= {10.1007/s00245-017-9459-4},
-  url		= {https://doi.org/10.1007/s00245-017-9459-4}
 }
 
 @Article{	  cerrai.freidlin.ea:17:on,
@@ -10550,6 +10550,24 @@
 
 @Article{	  chen.dalang:15:moments,
   author	= {Chen, Le and Dalang, Robert C.},
+  title		= {Moments and growth indices for the nonlinear stochastic
+		  heat equation with rough initial conditions},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {43},
+  year		= {2015},
+  number	= {6},
+  pages		= {3006--3051},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60 60G60)},
+  mrnumber	= {3433576},
+  mrreviewer	= {Mathew Joseph},
+  doi		= {10.1214/14-AOP954},
+  url		= {https://doi.org/10.1214/14-AOP954}
+}
+
+@Article{	  chen.dalang:15:moments*1,
+  author	= {Chen, Le and Dalang, Robert C.},
   title		= {Moments, intermittency and growth indices for the
 		  nonlinear fractional stochastic heat equation},
   journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
@@ -10565,24 +10583,6 @@
   mrreviewer	= {Jan I. Seidler},
   doi		= {10.1007/s40072-015-0054-x},
   url		= {https://doi.org/10.1007/s40072-015-0054-x}
-}
-
-@Article{	  chen.dalang:15:moments*1,
-  author	= {Chen, Le and Dalang, Robert C.},
-  title		= {Moments and growth indices for the nonlinear stochastic
-		  heat equation with rough initial conditions},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {43},
-  year		= {2015},
-  number	= {6},
-  pages		= {3006--3051},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35R60 60G60)},
-  mrnumber	= {3433576},
-  mrreviewer	= {Mathew Joseph},
-  doi		= {10.1214/14-AOP954},
-  url		= {https://doi.org/10.1214/14-AOP954}
 }
 
 @Article{	  chen.deya.ea:21:k-rough,
@@ -11759,23 +11759,7 @@
   url		= {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
 
-@InCollection{	  chen:00:on,
-  author	= {Chen, Xia},
-  title		= {On the law of the iterated logarithm for local times of
-		  recurrent random walks},
-  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
-		  1999)},
-  series	= {Progr. Probab.},
-  volume	= {47},
-  pages		= {249--259},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2000},
-  mrclass	= {60F15 (60J55)},
-  mrnumber	= {1857326},
-  mrreviewer	= {Ingemar Kaj}
-}
-
-@Article{	  chen:00:on*1,
+@Article{	  chen:00:on,
   author	= {Chen, Xia},
   title		= {On the limit laws of the second order for additive
 		  functionals of {H}arris recurrent {M}arkov chains},
@@ -11790,6 +11774,22 @@
   mrnumber	= {1736591},
   doi		= {10.1007/PL00008724},
   url		= {https://doi.org/10.1007/PL00008724}
+}
+
+@InCollection{	  chen:00:on*1,
+  author	= {Chen, Xia},
+  title		= {On the law of the iterated logarithm for local times of
+		  recurrent random walks},
+  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
+		  1999)},
+  series	= {Progr. Probab.},
+  volume	= {47},
+  pages		= {249--259},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2000},
+  mrclass	= {60F15 (60J55)},
+  mrnumber	= {1857326},
+  mrreviewer	= {Ingemar Kaj}
 }
 
 @Article{	  chen:01:exact,
@@ -13028,6 +13028,24 @@
 }
 
 @Article{	  conus.joseph.ea:13:on,
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
+  title		= {On the chaotic character of the stochastic heat equation,
+		  before the onset of intermitttency},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {41},
+  year		= {2013},
+  number	= {3B},
+  pages		= {2225--2260},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {3098071},
+  mrreviewer	= {Sergey V. Lototsky},
+  doi		= {10.1214/11-AOP717},
+  url		= {https://doi.org/10.1214/11-AOP717}
+}
+
+@Article{	  conus.joseph.ea:13:on*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {On the chaotic character of the stochastic heat equation,
@@ -13044,24 +13062,6 @@
   mrreviewer	= {Sergey V. Lototsky},
   doi		= {10.1007/s00440-012-0434-3},
   url		= {https://doi.org/10.1007/s00440-012-0434-3}
-}
-
-@Article{	  conus.joseph.ea:13:on*1,
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
-  title		= {On the chaotic character of the stochastic heat equation,
-		  before the onset of intermitttency},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {41},
-  year		= {2013},
-  number	= {3B},
-  pages		= {2225--2260},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35R60)},
-  mrnumber	= {3098071},
-  mrreviewer	= {Sergey V. Lototsky},
-  doi		= {10.1214/11-AOP717},
-  url		= {https://doi.org/10.1214/11-AOP717}
 }
 
 @Article{	  conus.joseph.ea:14:initial,
@@ -13428,23 +13428,6 @@
 }
 
 @Article{	  corwin.ghosal.ea:20:stochastic,
-  author	= {Corwin, Ivan and Ghosal, Promit and Shen, Hao and Tsai,
-		  Li-Cheng},
-  title		= {Stochastic {PDE} limit of the six vertex model},
-  journal	= {Comm. Math. Phys.},
-  fjournal	= {Communications in Mathematical Physics},
-  volume	= {375},
-  year		= {2020},
-  number	= {3},
-  pages		= {1945--2038},
-  issn		= {0010-3616},
-  mrclass	= {60K35 (35R60 60H15 82C22)},
-  mrnumber	= {4091508},
-  doi		= {10.1007/s00220-019-03678-z},
-  url		= {https://doi.org/10.1007/s00220-019-03678-z}
-}
-
-@Article{	  corwin.ghosal.ea:20:stochastic*1,
   author	= {Corwin, Ivan and Ghosal, Promit and Matetski, Konstantin},
   title		= {Stochastic {PDE} limit of the dynamic {ASEP}},
   journal	= {Comm. Math. Phys.},
@@ -13459,6 +13442,23 @@
   mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
   doi		= {10.1007/s00220-020-03905-y},
   url		= {https://doi.org/10.1007/s00220-020-03905-y}
+}
+
+@Article{	  corwin.ghosal.ea:20:stochastic*1,
+  author	= {Corwin, Ivan and Ghosal, Promit and Shen, Hao and Tsai,
+		  Li-Cheng},
+  title		= {Stochastic {PDE} limit of the six vertex model},
+  journal	= {Comm. Math. Phys.},
+  fjournal	= {Communications in Mathematical Physics},
+  volume	= {375},
+  year		= {2020},
+  number	= {3},
+  pages		= {1945--2038},
+  issn		= {0010-3616},
+  mrclass	= {60K35 (35R60 60H15 82C22)},
+  mrnumber	= {4091508},
+  doi		= {10.1007/s00220-019-03678-z},
+  url		= {https://doi.org/10.1007/s00220-019-03678-z}
 }
 
 @Article{	  corwin.ghosal.ea:21:kpz,
@@ -15869,24 +15869,6 @@
 
 @Article{	  dalang:88:on,
   author	= {Dalang, Robert C.},
-  title		= {On infinite perfect graphs and randomized stopping points
-		  on the plane},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {78},
-  year		= {1988},
-  number	= {3},
-  pages		= {357--378},
-  issn		= {0178-8051},
-  mrclass	= {60G40 (05C99)},
-  mrnumber	= {949178},
-  mrreviewer	= {U. Krengel},
-  doi		= {10.1007/BF00334200},
-  url		= {https://doi.org/10.1007/BF00334200}
-}
-
-@Article{	  dalang:88:on*1,
-  author	= {Dalang, Robert C.},
   title		= {On stopping points in the plane that lie on a unique
 		  optional increasing path},
   journal	= {Stochastics},
@@ -15901,6 +15883,24 @@
   mrreviewer	= {Nicholas Frangos},
   doi		= {10.1080/17442508808833517},
   url		= {https://doi.org/10.1080/17442508808833517}
+}
+
+@Article{	  dalang:88:on*1,
+  author	= {Dalang, Robert C.},
+  title		= {On infinite perfect graphs and randomized stopping points
+		  on the plane},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {78},
+  year		= {1988},
+  number	= {3},
+  pages		= {357--378},
+  issn		= {0178-8051},
+  mrclass	= {60G40 (05C99)},
+  mrnumber	= {949178},
+  mrreviewer	= {U. Krengel},
+  doi		= {10.1007/BF00334200},
+  url		= {https://doi.org/10.1007/BF00334200}
 }
 
 @Article{	  dalang:89:optimal,
@@ -16428,6 +16428,25 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -16442,25 +16461,6 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.feng:01:large,
@@ -19684,6 +19684,21 @@
 @Book{		  erdelyi.magnus.ea:81:higher,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {I}},
+  note		= {Based on notes left by Harry Bateman, With a preface by
+		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
+		  1953 original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xiii+302},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698779}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*1,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {III}},
   note		= {Based on notes left by Harry Bateman, Reprint of the 1955
 		  original},
@@ -19695,7 +19710,7 @@
   mrnumber	= {698781}
 }
 
-@Book{		  erdelyi.magnus.ea:81:higher*1,
+@Book{		  erdelyi.magnus.ea:81:higher*2,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {II}},
@@ -19707,21 +19722,6 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698780}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*2,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {I}},
-  note		= {Based on notes left by Harry Bateman, With a preface by
-		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
-		  1953 original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xiii+302},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698779}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -25319,7 +25319,20 @@
   url		= {https://doi.org/10.1088/0951-7715/23/4/008}
 }
 
-@Article{	  hairer.manson:10:periodic,
+@InCollection{	  hairer.manson:10:periodic,
+  author	= {Hairer, Martin and Manson, Charles},
+  title		= {Periodic homogenization with an interface},
+  booktitle	= {Progress in analysis and its applications},
+  pages		= {410--416},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2010},
+  mrclass	= {60J60 (60F05)},
+  mrnumber	= {2766949},
+  doi		= {10.1142/9789814313179\_0053},
+  url		= {https://doi.org/10.1142/9789814313179_0053}
+}
+
+@Article{	  hairer.manson:10:periodic*1,
   author	= {Hairer, Martin and Manson, Charles},
   title		= {Periodic homogenization with an interface: the
 		  one-dimensional case},
@@ -25335,19 +25348,6 @@
   mrreviewer	= {Nicolas Saintier},
   doi		= {10.1016/j.spa.2010.03.016},
   url		= {https://doi.org/10.1016/j.spa.2010.03.016}
-}
-
-@InCollection{	  hairer.manson:10:periodic*1,
-  author	= {Hairer, Martin and Manson, Charles},
-  title		= {Periodic homogenization with an interface},
-  booktitle	= {Progress in analysis and its applications},
-  pages		= {410--416},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2010},
-  mrclass	= {60J60 (60F05)},
-  mrnumber	= {2766949},
-  doi		= {10.1142/9789814313179\_0053},
-  url		= {https://doi.org/10.1142/9789814313179_0053}
 }
 
 @Article{	  hairer.manson:11:periodic,
@@ -26178,6 +26178,18 @@
   author	= {Hairer, Martin},
   title		= {Singular stochastic {PDE}s},
   booktitle	= {Proceedings of the {I}nternational {C}ongress of
+		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
+  pages		= {49--73},
+  publisher	= {Kyung Moon Sa, Seoul},
+  year		= {2014},
+  mrclass	= {60H15 (81S20 82C28)},
+  mrnumber	= {3727602}
+}
+
+@InProceedings{	  hairer:14:singular*1,
+  author	= {Hairer, Martin},
+  title		= {Singular stochastic {PDE}s},
+  booktitle	= {Proceedings of the {I}nternational {C}ongress of
 		  {M}athematicians---{S}eoul 2014. {V}ol. 1},
   pages		= {685--709},
   publisher	= {Kyung Moon Sa, Seoul},
@@ -26185,18 +26197,6 @@
   mrclass	= {60H15 (81S20 82C28)},
   mrnumber	= {3728488},
   mrreviewer	= {Peter Karl Friz}
-}
-
-@InProceedings{	  hairer:14:singular*1,
-  author	= {Hairer, Martin},
-  title		= {Singular stochastic {PDE}s},
-  booktitle	= {Proceedings of the {I}nternational {C}ongress of
-		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
-  pages		= {49--73},
-  publisher	= {Kyung Moon Sa, Seoul},
-  year		= {2014},
-  mrclass	= {60H15 (81S20 82C28)},
-  mrnumber	= {3727602}
 }
 
 @InCollection{	  hairer:14:solving,
@@ -28628,6 +28628,24 @@
   url		= {https://doi.org/10.1016/j.spa.2019.09.014}
 }
 
+@Article{	  hu.nualart:05:renormalized,
+  author	= {Hu, Yaozhong and Nualart, David},
+  title		= {Renormalized self-intersection local time for fractional
+		  {B}rownian motion},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {33},
+  year		= {2005},
+  number	= {3},
+  pages		= {948--983},
+  issn		= {0091-1798},
+  mrclass	= {60G15 (60F05 60F25 60G18 60J55)},
+  mrnumber	= {2135309},
+  mrreviewer	= {Corinne Berzin},
+  doi		= {10.1214/009117905000000017},
+  url		= {https://doi.org/10.1214/009117905000000017}
+}
+
 @Article{	  hu.nualart:05:some,
   author	= {Hu, Y. and Nualart, D.},
   title		= {Some processes associated with fractional {B}essel
@@ -30291,21 +30309,6 @@
 
 @InCollection{	  its.tracy.ea:01:random,
   author	= {Its, Alexander R. and Tracy, Craig A. and Widom, Harold},
-  title		= {Random words, {T}oeplitz determinants, and integrable
-		  systems. {I}},
-  booktitle	= {Random matrix models and their applications},
-  series	= {Math. Sci. Res. Inst. Publ.},
-  volume	= {40},
-  pages		= {245--258},
-  publisher	= {Cambridge Univ. Press, Cambridge},
-  year		= {2001},
-  mrclass	= {82B41 (05A99 37B99 37K10 47B35 60C05)},
-  mrnumber	= {1842789},
-  mrreviewer	= {Estelle L. Basor}
-}
-
-@InCollection{	  its.tracy.ea:01:random*1,
-  author	= {Its, Alexander R. and Tracy, Craig A. and Widom, Harold},
   title		= {Random words, {T}oeplitz determinants and integrable
 		  systems. {II}},
   note		= {Advances in nonlinear mathematics and science},
@@ -30320,6 +30323,21 @@
   mrreviewer	= {Martin V. Hildebrand},
   doi		= {10.1016/S0167-2789(01)00171-3},
   url		= {https://doi.org/10.1016/S0167-2789(01)00171-3}
+}
+
+@InCollection{	  its.tracy.ea:01:random*1,
+  author	= {Its, Alexander R. and Tracy, Craig A. and Widom, Harold},
+  title		= {Random words, {T}oeplitz determinants, and integrable
+		  systems. {I}},
+  booktitle	= {Random matrix models and their applications},
+  series	= {Math. Sci. Res. Inst. Publ.},
+  volume	= {40},
+  pages		= {245--258},
+  publisher	= {Cambridge Univ. Press, Cambridge},
+  year		= {2001},
+  mrclass	= {82B41 (05A99 37B99 37K10 47B35 60C05)},
+  mrnumber	= {1842789},
+  mrreviewer	= {Estelle L. Basor}
 }
 
 @InCollection{	  its:11:painleve,
@@ -36268,24 +36286,6 @@
 
 @Article{	  malliavin.nualart:93:quasi-sure,
   author	= {Malliavin, Paul and Nualart, David},
-  title		= {Quasi-sure analysis and {S}tratonovich anticipative
-		  stochastic differential equations},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {96},
-  year		= {1993},
-  number	= {1},
-  pages		= {45--55},
-  issn		= {0178-8051},
-  mrclass	= {60H10 (60H07)},
-  mrnumber	= {1222364},
-  mrreviewer	= {Daniel Ocone},
-  doi		= {10.1007/BF01195882},
-  url		= {https://doi.org/10.1007/BF01195882}
-}
-
-@Article{	  malliavin.nualart:93:quasi-sure*1,
-  author	= {Malliavin, Paul and Nualart, David},
   title		= {Quasi-sure analysis of stochastic flows and {B}anach space
 		  valued smooth functionals on the {W}iener space},
   journal	= {J. Funct. Anal.},
@@ -36300,6 +36300,24 @@
   mrreviewer	= {Vladimir I. Bogachev},
   doi		= {10.1006/jfan.1993.1034},
   url		= {https://doi.org/10.1006/jfan.1993.1034}
+}
+
+@Article{	  malliavin.nualart:93:quasi-sure*1,
+  author	= {Malliavin, Paul and Nualart, David},
+  title		= {Quasi-sure analysis and {S}tratonovich anticipative
+		  stochastic differential equations},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {96},
+  year		= {1993},
+  number	= {1},
+  pages		= {45--55},
+  issn		= {0178-8051},
+  mrclass	= {60H10 (60H07)},
+  mrnumber	= {1222364},
+  mrreviewer	= {Daniel Ocone},
+  doi		= {10.1007/BF01195882},
+  url		= {https://doi.org/10.1007/BF01195882}
 }
 
 @Book{		  malliavin.thalmaier:06:stochastic,
@@ -40402,25 +40420,7 @@
   url		= {https://doi.org/10.1016/j.jmaa.2019.123737}
 }
 
-@Article{	  nane:06:iterated,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion in bounded domains in
-		  {$\mathbb{R}^n$}},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {116},
-  year		= {2006},
-  number	= {6},
-  pages		= {905--916},
-  issn		= {0304-4149},
-  mrclass	= {60J65},
-  mrnumber	= {2254664},
-  mrreviewer	= {Endre Cs\'{a}ki},
-  doi		= {10.1016/j.spa.2005.10.007},
-  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
-}
-
-@Book{		  nane:06:iterated*1,
+@Book{		  nane:06:iterated,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
 		  isoperimetric-type inequalities},
@@ -40434,7 +40434,7 @@
   url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
 }
 
-@Article{	  nane:06:iterated*2,
+@Article{	  nane:06:iterated*1,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
@@ -40451,6 +40451,24 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
+}
+
+@Article{	  nane:06:iterated*2,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion in bounded domains in
+		  {$\mathbb{R}^n$}},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {116},
+  year		= {2006},
+  number	= {6},
+  pages		= {905--916},
+  issn		= {0304-4149},
+  mrclass	= {60J65},
+  mrnumber	= {2254664},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1016/j.spa.2005.10.007},
+  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
 @Article{	  nane:06:laws,
@@ -42698,21 +42716,6 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -42728,6 +42731,21 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -43050,25 +43068,7 @@
   url		= {https://doi.org/10.1080/17442508808833542}
 }
 
-@Article{	  nualart.ustunel.ea:90:some,
-  author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
-  title		= {Some relations among classes of {$\sigma$}-fields on
-		  {W}iener space},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {85},
-  year		= {1990},
-  number	= {1},
-  pages		= {119--129},
-  issn		= {0178-8051},
-  mrclass	= {60H05 (28C20 46G12 60H07)},
-  mrnumber	= {1044304},
-  mrreviewer	= {Ana Bela Cruzeiro},
-  doi		= {10.1007/BF01377633},
-  url		= {https://doi.org/10.1007/BF01377633}
-}
-
-@InCollection{	  nualart.ustunel.ea:90:some*1,
+@InCollection{	  nualart.ustunel.ea:90:some,
   author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
   title		= {Some remarks on independence and conditioning on {W}iener
 		  space},
@@ -43084,6 +43084,24 @@
   mrreviewer	= {Denis R. Bell},
   doi		= {10.1007/BFb0083612},
   url		= {https://doi.org/10.1007/BFb0083612}
+}
+
+@Article{	  nualart.ustunel.ea:90:some*1,
+  author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
+  title		= {Some relations among classes of {$\sigma$}-fields on
+		  {W}iener space},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {85},
+  year		= {1990},
+  number	= {1},
+  pages		= {119--129},
+  issn		= {0178-8051},
+  mrclass	= {60H05 (28C20 46G12 60H07)},
+  mrnumber	= {1044304},
+  mrreviewer	= {Ana Bela Cruzeiro},
+  doi		= {10.1007/BF01377633},
+  url		= {https://doi.org/10.1007/BF01377633}
 }
 
 @Article{	  nualart.ustunel:89:extension,
@@ -43970,19 +43988,6 @@
 
 @InProceedings{	  nualart:77:on,
   author	= {Nualart, David},
-  title		= {On the convergence of martingales},
-  booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
-		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
-  pages		= {638--646},
-  publisher	= {Consejo Sup. Inv. Cient., Madrid},
-  year		= {1977},
-  mrclass	= {60G42},
-  mrnumber	= {581115},
-  mrreviewer	= {Dominique L\'{e}pingle}
-}
-
-@InProceedings{	  nualart:77:on*1,
-  author	= {Nualart, David},
   title		= {On the order convergence of stochastic processes},
   booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
 		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
@@ -43992,6 +43997,19 @@
   mrclass	= {60G17 (60G07)},
   mrnumber	= {581116},
   mrreviewer	= {Evarist Gin\'{e}}
+}
+
+@InProceedings{	  nualart:77:on*1,
+  author	= {Nualart, David},
+  title		= {On the convergence of martingales},
+  booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
+		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
+  pages		= {638--646},
+  publisher	= {Consejo Sup. Inv. Cient., Madrid},
+  year		= {1977},
+  mrclass	= {60G42},
+  mrnumber	= {581115},
+  mrreviewer	= {Dominique L\'{e}pingle}
 }
 
 @InCollection{	  nualart:79:decomposition,
@@ -47931,22 +47949,6 @@
 
 @Article{	  rovira.tindel:00:sharp,
   author	= {Rovira, Carles and Tindel, Samy},
-  title		= {Sharp {L}aplace asymptotics for a parabolic {SPDE}},
-  journal	= {Stochastics Stochastics Rep.},
-  fjournal	= {Stochastics and Stochastics Reports},
-  volume	= {69},
-  year		= {2000},
-  number	= {1-2},
-  pages		= {11--30},
-  issn		= {1045-1129},
-  mrclass	= {60F10 (60H15)},
-  mrnumber	= {1751716},
-  doi		= {10.1080/17442500008834230},
-  url		= {https://doi.org/10.1080/17442500008834230}
-}
-
-@Article{	  rovira.tindel:00:sharp*1,
-  author	= {Rovira, Carles and Tindel, Samy},
   title		= {Sharp large deviation estimates for a certain class of
 		  sets on the {W}iener space},
   journal	= {Bull. Sci. Math.},
@@ -47961,6 +47963,22 @@
   mrreviewer	= {Ali S\"{u}leyman \"{U}st\"{u}nel},
   doi		= {10.1016/S0007-4497(00)01062-9},
   url		= {https://doi.org/10.1016/S0007-4497(00)01062-9}
+}
+
+@Article{	  rovira.tindel:00:sharp*1,
+  author	= {Rovira, Carles and Tindel, Samy},
+  title		= {Sharp {L}aplace asymptotics for a parabolic {SPDE}},
+  journal	= {Stochastics Stochastics Rep.},
+  fjournal	= {Stochastics and Stochastics Reports},
+  volume	= {69},
+  year		= {2000},
+  number	= {1-2},
+  pages		= {11--30},
+  issn		= {1045-1129},
+  mrclass	= {60F10 (60H15)},
+  mrnumber	= {1751716},
+  doi		= {10.1080/17442500008834230},
+  url		= {https://doi.org/10.1080/17442500008834230}
 }
 
 @InCollection{	  rovira.tindel:01:sharp,
@@ -52280,24 +52298,6 @@
 
 @Article{	  tracy.widom:13:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the diagonal susceptibility of the two-dimensional
-		  {I}sing model},
-  journal	= {J. Math. Phys.},
-  fjournal	= {Journal of Mathematical Physics},
-  volume	= {54},
-  year		= {2013},
-  number	= {12},
-  pages		= {123302, 9},
-  issn		= {0022-2488},
-  mrclass	= {81V35 (81R12)},
-  mrnumber	= {3156118},
-  mrreviewer	= {Anja Vo\ss -B\"{o}hme},
-  doi		= {10.1063/1.4836779},
-  url		= {https://doi.org/10.1063/1.4836779}
-}
-
-@Article{	  tracy.widom:13:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the asymmetric simple exclusion process with multiple
 		  species},
   journal	= {J. Stat. Phys.},
@@ -52312,6 +52312,24 @@
   mrreviewer	= {Anja Vo\ss -B\"{o}hme},
   doi		= {10.1007/s10955-012-0531-9},
   url		= {https://doi.org/10.1007/s10955-012-0531-9}
+}
+
+@Article{	  tracy.widom:13:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the diagonal susceptibility of the two-dimensional
+		  {I}sing model},
+  journal	= {J. Math. Phys.},
+  fjournal	= {Journal of Mathematical Physics},
+  volume	= {54},
+  year		= {2013},
+  number	= {12},
+  pages		= {123302, 9},
+  issn		= {0022-2488},
+  mrclass	= {81V35 (81R12)},
+  mrnumber	= {3156118},
+  mrreviewer	= {Anja Vo\ss -B\"{o}hme},
+  doi		= {10.1063/1.4836779},
+  url		= {https://doi.org/10.1063/1.4836779}
 }
 
 @Article{	  tracy.widom:14:on,
@@ -52333,6 +52351,23 @@
 
 @Article{	  tracy.widom:16:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the ground state energy of the {$\delta$}-function
+		  {B}ose gas},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
+  volume	= {49},
+  year		= {2016},
+  number	= {29},
+  pages		= {294001, 17},
+  issn		= {1751-8113},
+  mrclass	= {82D05},
+  mrnumber	= {3512121},
+  doi		= {10.1088/1751-8113/49/29/294001},
+  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
+}
+
+@Article{	  tracy.widom:16:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the ground state energy of the delta-function {F}ermi
 		  gas},
   journal	= {J. Math. Phys.},
@@ -52347,23 +52382,6 @@
   mrreviewer	= {Reinhard Redlinger},
   doi		= {10.1063/1.4964252},
   url		= {https://doi.org/10.1063/1.4964252}
-}
-
-@Article{	  tracy.widom:16:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the ground state energy of the {$\delta$}-function
-		  {B}ose gas},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
-  volume	= {49},
-  year		= {2016},
-  number	= {29},
-  pages		= {294001, 17},
-  issn		= {1751-8113},
-  mrclass	= {82D05},
-  mrnumber	= {3512121},
-  doi		= {10.1088/1751-8113/49/29/294001},
-  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
 }
 
 @Article{	  tracy.widom:17:blocks,
@@ -52774,6 +52792,21 @@
 
 @Article{	  tracy:88:universality,
   author	= {Tracy, Craig A.},
+  title		= {Universality classes of some aperiodic {I}sing models},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and General},
+  volume	= {21},
+  year		= {1988},
+  number	= {11},
+  pages		= {L603--L605},
+  issn		= {0305-4470},
+  mrclass	= {82A68 (82-04 82A25)},
+  mrnumber	= {953188},
+  url		= {http://stacks.iop.org/0305-4470/21/L603}
+}
+
+@Article{	  tracy:88:universality*1,
+  author	= {Tracy, Craig A.},
   title		= {Universality class of a {F}ibonacci {I}sing model},
   journal	= {J. Statist. Phys.},
   fjournal	= {Journal of Statistical Physics},
@@ -52787,21 +52820,6 @@
   mrreviewer	= {Peter J. Forrester},
   doi		= {10.1007/BF01028467},
   url		= {https://doi.org/10.1007/BF01028467}
-}
-
-@Article{	  tracy:88:universality*1,
-  author	= {Tracy, Craig A.},
-  title		= {Universality classes of some aperiodic {I}sing models},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and General},
-  volume	= {21},
-  year		= {1988},
-  number	= {11},
-  pages		= {L603--L605},
-  issn		= {0305-4470},
-  mrclass	= {82A68 (82-04 82A25)},
-  mrnumber	= {953188},
-  url		= {http://stacks.iop.org/0305-4470/21/L603}
 }
 
 @InCollection{	  tracy:89:introduction,
@@ -55088,21 +55106,7 @@
   url		= {https://doi.org/10.1007/BFb0002685}
 }
 
-@InProceedings{	  zabczyk:89:some,
-  author	= {Zabczyk, Jerzy},
-  title		= {Some interplays between control theory and stochastic
-		  systems},
-  booktitle	= {Proceedings of the 28th {IEEE} {C}onference on {D}ecision
-		  and {C}ontrol, {V}ol. 1--3 ({T}ampa, {FL}, 1989)},
-  pages		= {229--231},
-  publisher	= {IEEE, New York},
-  year		= {1989},
-  mrclass	= {93E03 (93C25)},
-  mrnumber	= {1038935},
-  mrreviewer	= {Akira Ichikawa}
-}
-
-@Article{	  zabczyk:89:some*1,
+@Article{	  zabczyk:89:some,
   author	= {Zabczyk, J.},
   title		= {Some comments on stabilizability},
   journal	= {Appl. Math. Optim.},
@@ -55117,6 +55121,20 @@
   mrreviewer	= {Enrique Zuazua},
   doi		= {10.1007/BF01448189},
   url		= {https://doi.org/10.1007/BF01448189}
+}
+
+@InProceedings{	  zabczyk:89:some*1,
+  author	= {Zabczyk, Jerzy},
+  title		= {Some interplays between control theory and stochastic
+		  systems},
+  booktitle	= {Proceedings of the 28th {IEEE} {C}onference on {D}ecision
+		  and {C}ontrol, {V}ol. 1--3 ({T}ampa, {FL}, 1989)},
+  pages		= {229--231},
+  publisher	= {IEEE, New York},
+  year		= {1989},
+  mrclass	= {93E03 (93C25)},
+  mrnumber	= {1038935},
+  mrreviewer	= {Akira Ichikawa}
 }
 
 @InCollection{	  zabczyk:89:symmetric,
