Adding license information

--- a/All.bib
+++ b/All.bib
@@ -1,4 +1,20 @@
 
+% ---------------------------
+% This bibliography file --  All.bib  -- is licensed under the Creative Commons
+% Attribution-ShareAlike 4.0 International (CC BY-SA 4.0) license. You are free
+% to share and adapt the contents of this file as long as you give appropriate
+% credit and distribute any derivative works under the same license.
+% ---------------------------
+
+
+% ---------------------------
+% Author: chenle02
+% Email: chenle02 at gmail.com
+% Github Repo: https://github.com/chenle02/SPDEs-Bib.git
+% Commit hash: 9e50122dc81b009b21b5f1b593d384047d601536
+% Date: 2023-01-27
+% ---------------------------
+
 @Article{	  .proske.ea:05:backward,
   author	= {\O ksendal, Bernt and Proske, Frank and Zhang, Tusheng},
   title		= {Backward stochastic partial differential equations with
